feat(api): add queue management
